--- a/.github/workflows/publish_web.yml
+++ b/.github/workflows/publish_web.yml
@@ -9,6 +9,20 @@ on:
       - main
     paths-ignore:
       - "**.md"
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+  # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+  permissions:
+    contents: read
+    pages: write
+    id-token: write
+
+  # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+  # However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+  concurrency:
+    group: "pages"
+    cancel-in-progress: false
 
 jobs:
   analyze:
@@ -41,9 +55,9 @@ jobs:
           dart pub global activate dartdoc
           dart pub global run dartdoc .
 
-  publish_web:
+  build_web:
     needs: analyze
-    name: publish web
+    name: build_web
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v3
@@ -59,3 +73,32 @@ jobs:
       - run: flutter pub get
 #      - run: cd example; flutter build ios --no-codesign
       - run: bash scripts/build_web.sh
+
+      # Build job
+  build_jekyll:
+    needs: build_web
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+      - name: Build with Jekyll
+        uses: actions/jekyll-build-pages@v1
+        with:
+          source: ./build/web/
+          destination: ./_site
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+
+  # Deployment job
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build_jekyll
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
