--- a/.github/workflows/publish_web.yml
+++ b/.github/workflows/publish_web.yml
@@ -58,7 +58,7 @@ jobs:
   build_web:
     needs: analyze
     name: build_web
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
@@ -73,14 +73,6 @@ jobs:
       - run: flutter pub get
 #      - run: cd example; flutter build ios --no-codesign
       - run: bash scripts/build_web.sh
-
-      # Build job
-  build_jekyll:
-    needs: build_web
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Build with Jekyll
@@ -90,6 +82,23 @@ jobs:
           destination: ./_site
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
+
+      # Build job
+#  build_jekyll:
+#    needs: build_web
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v4
+#      - name: Setup Pages
+#        uses: actions/configure-pages@v5
+#      - name: Build with Jekyll
+#        uses: actions/jekyll-build-pages@v1
+#        with:
+#          source: ./build/web/
+#          destination: ./_site
+#      - name: Upload artifact
+#        uses: actions/upload-pages-artifact@v3
 
   # Deployment job
   deploy:
