--- a/.github/workflows/publish_web.yml
+++ b/.github/workflows/publish_web.yml
@@ -106,7 +106,7 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    needs: build_jekyll
+    needs: build_web
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
