--- a/.github/workflows/publish_web.yml
+++ b/.github/workflows/publish_web.yml
@@ -32,8 +32,8 @@ jobs:
       matrix:
         os: [ ubuntu-latest ]
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
         with:
           distribution: 'adopt'
           java-version: '11.x'
@@ -55,13 +55,13 @@ jobs:
           dart pub global activate dartdoc
           dart pub global run dartdoc .
 
-  build_web:
+  build_web_and_jekyll:
     needs: analyze
     name: build_web
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
         with:
           distribution: 'adopt'
           java-version: '11.x'
@@ -83,30 +83,13 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
 
-      # Build job
-#  build_jekyll:
-#    needs: build_web
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v4
-#      - name: Setup Pages
-#        uses: actions/configure-pages@v5
-#      - name: Build with Jekyll
-#        uses: actions/jekyll-build-pages@v1
-#        with:
-#          source: ./build/web/
-#          destination: ./_site
-#      - name: Upload artifact
-#        uses: actions/upload-pages-artifact@v3
-
   # Deployment job
   deploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    needs: build_web
+    needs: build_web_and_jekyll
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
